fixing the home img was showing on top of the .about::before element, and fixing horizontal scrollbar on mobile view due to the scroll reveal effects

--- a/src/Main/home/home.css
+++ b/src/Main/home/home.css
@@ -12,6 +12,7 @@
     height: 100vh;
     align-items: center;
     padding-top: 15vh;
+    z-index: 2;
 }
 
 .home-content {
