--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@ body {
 }
 
 section {
-    padding: 3vh 10% 15vh;
+    padding: 5vh 10% 13vh;
     position: relative;
 }
 
